feat: added sections and media

--- a/index.html
+++ b/index.html
@@ -18,7 +18,68 @@
       </ul>
     </nav>
 
-    <main></main>
+    <main>
+      <section id="home">
+        <h2>Home Section</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+          ullam corporis nostrum ea. Consequatur maxime ab, eaque cum fuga minus
+          ipsam ea tenetur ad in pariatur deserunt ducimus nesciunt
+          reprehenderit?
+        </p>
+      </section>
+
+      <section id="about">
+        <h2>About Section</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut nam
+          soluta, quis ducimus laborum voluptas error fuga inventore vel
+          debitis. Earum consequatur praesentium maiores reiciendis vitae,
+          necessitatibus laborum error commodi.
+        </p>
+        <br />
+        <img
+          src="https://img.freepik.com/premium-photo/banner-tipe-full-stack-developer_980716-272.jpg?w=826"
+          alt="Full Stack Web Dev Image"
+          width="400"
+          height="350"
+        />
+        <br />
+        <br />
+
+        <video width="320" height="240" controls>
+          <source
+            src="https://www.youtube.com/watch?v=u72H_zZzkcw&themeRefresh=1"
+            type="video/mp4"
+          />
+          <br />
+          Your browser does not support the video tag.
+        </video>
+      </section>
+
+      <section id="contact">
+        <h2>Contact Section</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+          temporibus harum vitae sapiente cumque sunt eveniet atque magni!
+          Tenetur officia nesciunt qui mollitia ad facere tempora fugiat aut vel
+          dolorum.
+        </p>
+        <br />
+        <form action="#" method="post">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+
+          <input type="submit" value="Submit" />
+        </form>
+      </section>
+    </main>
 
     <footer>
       <p>&copy; 2024 VJDBARAYUGA</p>
