feat: re-added sections and media

--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
         <br />
         <br />
 
-        <video width="320" height="240" controls>
-          <source
-            src="https://www.youtube.com/watch?v=u72H_zZzkcw&themeRefresh=1"
-            type="video/mp4"
-          />
-          <br />
-          Your browser does not support the video tag.
-        </video>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/u72H_zZzkcw"
+          frameborder="0"
+          allowfullscreen
+        ></iframe>
       </section>
 
       <section id="contact">
